<resources>
    <string name="app_name">Vox populi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Vox populi</string>
    <string name="nav_header_subtitle">info@vox.ae</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="half_poster_image">Half poster image</string>
    <string name="client_image">client image</string>
    <string name="halfposterimage">halfposterimage</string>
    <string name="example">Example</string>
    <string name="paragraphtext">Paragraph Text</string>
    <string name="client1">vox always embrace latest technology and it advancements with enthusiasm in order to provide state-of-the-art development infrastructure for all websites and portals we facilitate our clientele with.</string>
    <string name="contact_form">Contact Us</string>
    <string name="contact_form_name">Your Name</string>
    <string name="contact_form_email">Your Email</string>
    <string name="contact_form_phone">Mobile</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_button">Send</string>
    <string name="contact_form_post_message">Please wait! We\'re sending your message to the support department...</string>
    <string name="contact_posted">Your message has been successfully delivered.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descriptionvalue">vox always embrace latest technology and it advancements with enthusiasm in order to provide state-of-the-art development infrastructure for all websites and portals we facilitate our clientele with.</string>
    <string name="ticket_type">ticket type</string>
</resources>
